health/health-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: health-service
  namespace: health  
spec:
  type: NodePort
  selector:
    app: health-app
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 8877
