health/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: health-ingress
  namespace: health
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
#    nginx.ingress.kubernetes.io/proxy-body-size: '20m'
#    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
    - hosts:
      - health.chevrutah.com
      secretName: health-chevrutah-tls
  rules:
    - host: health.chevrutah.com
      http:
        paths:
          - path: /
            backend:
              serviceName: health-service
              servicePort: 80
